--- a/LanzhouBeefNoodles/appsettings.json
+++ b/LanzhouBeefNoodles/appsettings.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+
+  //"Logging": {
+  //  "LogLevel": {
+  //    "Default": "Warning"
+  //  }
+  //},
+  //"AllowedHosts": "\"*\"£¬",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=LanzhouNoodleDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
+
 }
